<resources>
    <string name="app_id">fhdtPgyKimlBZrpV0MxV</string>
    <string name="app_name">COC Assistant</string>
    <string name="app_title">Serving The Lord\'s Servant</string>
    <string name="app_ver">Version 1.0</string>
    <string name="app_ryt">Copyright 2018</string>
    <string name="app_dev">Vide Desk</string>
    <string name="app_com">(www.videdesk.com)</string>
    <string name="app_dev_team">Vide Desk Team</string>
    <string name="app_email">videdesk@gmail.com</string>
    <string name="txt_profile">My Profile</string>
    <string name="txt_countries">Countries</string>
    <string name="txt_topics">Topics</string>
    <string name="txt_connect_me">ConnectMe</string>
    <string name="txt_dashboard">Dashboard</string>
    <string name="txt_manage">Manage</string>
    <string name="txt_create">Create</string>
    <string name="txt_home">Home</string>
    <string name="txt_messages">Messages</string>
    <string name="txt_contacts">Contacts</string>
    <string name="txt_calendar">Calendar</string>
    <string name="txt_my_toolbox">My Toolbox</string>
    <string name="txt_bookmarks">Bookmarks</string>
    <string name="txt_favourites">Favourites</string>
    <string name="txt_obsolete">Obsolete</string>
    <string name="txt_obsolete_info">
        This version of COC Assistant is now obsolete.
        There is a newer version on the Google Play Store.
        Please update now!
    </string>
    <string name="txt_update_now">Update Now!</string>
    <string name="txt_account">Account</string>
    <string name="txt_login">Login</string>
    <string name="txt_tour">Tour</string>
    <string name="txt_register">Register</string>
    <string name="txt_reset">Reset</string>
    <string name="txt_create_new_account">Create new COC account now!</string>
    <string name="txt_already_registered">Already registered. Login Me!</string>
    <string name="txt_forgot_password">Forgot your password?</string>
    <string name="txt_reset_password">Reset Password</string>
    <string name="txt_cdata_back"><![CDATA[<< Back]]></string>
    <string name="txt_coc_account">COC Account</string>
    <string name="txt_auth_reguired">
        You need a valid COC Account to be able to perform this function. Login or register for a valid COC Account to proceed.
    </string>
    <string name="txt_auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="txt_edit">Edit</string>
    <string name="txt_delete">Delete</string>
    <string name="txt_logout">Logout</string>
    <string name="txt_name">Full Name</string>
    <string name="txt_gender">Gender</string>
    <string name="txt_country">Country</string>
    <string name="txt_region_state">Region/State</string>
    <string name="txt_location">Location</string>
    <string name="txt_phone">Phone Number (eg: +233000000000)</string>
    <string name="txt_phone_notes">Please enter your phone number including country code.</string>
    <string name="txt_email">Email Address</string>
    <string name="txt_password">Password</string>
    <string name="txt_save_continue">Save and continue</string>
    <string name="txt_minpass">Password too short, enter minimum 6 characters!</string>
    <string name="txt_info_register">
        Please enter your legal full name, valid email address and a new password in the fields provided below to create a COC Account.
    </string>
    <string name="txt_info_login">
        Please enter your COC Account email and password in the fields provided to sign in.
    </string>
    <string name="txt_conn_error">
        You are not connected to the Internet! You need internet connection for this section to work properly.
        Please connect and try again.
    </string>
    <string name="txt_search">Search</string>
    <string name="txt_about">About us</string>
    <string name="txt_help">Help Info</string>
    <string name="txt_share">Share It</string>
    <string name="txt_settings">Settings</string>
    <string name="txt_holy_bible">Holy Bible</string>
    <string name="txt_new_testament">New Testament</string>
    <string name="txt_old_testament">Old Testament</string>
    <string name="txt_version_info">Select the Bible version</string>
    <string name="txt_ch">CH</string>
    <string name="txt_three_nines">999</string>
    <string name="txt_advance_search">Advance search</string>
    <string name="txt_go">Go</string>
    <string name="txt_back">Back</string>
    <string name="txt_next">Next</string>
    <string name="txt_share_msg">
        Gong gong! I am now on Dawuro.\n\n
        Dawuro - Community Versatile Communication\n\n
        An information platform made for the whole community suitable for
        churches, old students unions, trade unions, fun clubs and supporters unions, etc.\n\n
        Announcement, News Updates, Current Events, Instant Chats, Group Forums, Bulk SMS, Public Notices, Hot Gossips.\n\n
        Get the app of Google Playstore:\n
        https://play.google.com/store/apps/details?id=com.videdesk.mobile.cocassistant
    </string>
    <string name="txt_update">Update</string>
    <string name="txt_message">Message here &#8230; </string>
    <string name="txt_send">Send</string>
    <string name="txt_submit">Submit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="txt_bible_asv">American Standard Version</string>
    <string name="txt_bible_bbe">Bible in Basic English</string>
    <string name="txt_bible_deb">Darby English Bible</string>
    <string name="txt_bible_kjv">King James Version</string>
    <string name="txt_bible_wbt">Webster\'s Bible</string>
    <string name="txt_bible_web">World English Bible</string>
    <string name="txt_bible_ylt">Young\'s Literal Translation</string>
    <string name="txt_law">Law</string>
    <string name="txt_history">History</string>
    <string name="txt_wisdom">Wisdom</string>
    <string name="txt_prophets">Prophets</string>
    <string name="txt_gospels">Gospels</string>
    <string name="txt_acts">Acts</string>
    <string name="txt_epistles">Epistles</string>
    <string name="txt_apocalyptic">Apocalyptic</string>
    <string name="txt_ot">Old Testament</string>
    <string name="txt_nt">New Testament</string>
    <string name="txt_both">Whole Bible</string>
</resources>