<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/txt_home" />
        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/ic_forum_black_24dp"
            android:title="@string/txt_messages" />
        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/ic_contacts_black_24dp"
            android:title="@string/txt_contacts" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_event_black_24dp"
            android:title="@string/txt_calendar" />
    </group>

    <item android:title="@string/txt_my_toolbox">
        <menu>
            <item
                android:id="@+id/nav_bookmarks"
                android:icon="@drawable/ic_bookmark_border_black_24dp"
                android:title="@string/txt_bookmarks" />
            <item
                android:id="@+id/nav_favourites"
                android:icon="@drawable/ic_favorite_border_black_24dp"
                android:title="@string/txt_favourites" />
        </menu>
    </item>

</menu>
