<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_search"
        android:orderInCategory="100"
        android:title="@string/txt_search"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView" />

    <item
        android:id="@+id/menu_about"
        android:orderInCategory="200"
        android:title="@string/txt_about"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_share"
        android:orderInCategory="400"
        android:title="@string/txt_share"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="500"
        android:title="@string/txt_settings"
        app:showAsAction="never" />
</menu>
