<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="6dp"
    android:background="@drawable/bgx"
    tools:context=".activity.AboutActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="65dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:id="@+id/lbl_app_name"
            android:layout_marginBottom="6dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="28sp"
            android:textColor="@color/colorWhite" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_title"
            android:id="@+id/lbl_app_title"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:layout_marginBottom="6dp"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_ver"
            android:id="@+id/lbl_app_ver"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:gravity="center" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/app_name"
            android:foregroundGravity="center"
            android:src="@drawable/img_logo_rd" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_dev"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_com"
            android:id="@+id/lbl_app_dev"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_ryt"
            android:id="@+id/lbl_app_ryt"
            android:textColor="@color/colorWhite"
            android:gravity="center" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>