<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.BibleActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_bible"/>

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/fab_navi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        fab:menu_labels_position="right"
        android:layout_margin="0dp"
        style="@style/MenuButtonsStyle"
        fab:menu_fab_size="mini">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_next"
            style="@style/MenuButtonsStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_next"
            app:fab_label="@string/txt_next" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_prev"
            style="@style/MenuButtonsStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            app:fab_label="@string/txt_back" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_back"
            style="@style/MenuButtonsStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_dashboard"
            app:fab_label="@string/txt_home" />

    </com.github.clans.fab.FloatingActionMenu>

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/fab_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="0dp"
        style="@style/MenuButtonsStyle"
        fab:menu_fab_size="mini">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_nt"
            style="@style/MenuButtonsStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_collection"
            app:fab_label="@string/txt_nt" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_ot"
            style="@style/MenuButtonsStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_collection"
            app:fab_label="@string/txt_ot" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_all"
            style="@style/MenuButtonsStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_collection"
            app:fab_label="@string/txt_both" />

    </com.github.clans.fab.FloatingActionMenu>

</android.support.design.widget.CoordinatorLayout>